<resources>
    <string name="app_name">SOS-Mujer</string>

    <!--Labels-->
    <string name="lblCarga">Cargando aplicación...</string>
    <string name="lblRegistro">Registro</string>
    <string name="lblPregRegistro">¿No tienes una cuenta? ¡Regístrate!</string>
    <string name="lblPregInicio">¿Ya tienes una cuenta? ¡Inicia Sesión!</string>
    <string name="lblRecordar">Recordar Sesión</string>
    <string name="lblBienvenida">Bienvenida {nombre}</string>
    <string name="lblHola">Hola</string>
    <string name="lblConfiguracion">Configuración</string>
    <string name="lblNotificaciones">Recibir notificaciones</string>
    <string name="lblSonido">Sonido</string>
    <string name="lblAplicar">Aplicar</string>
    <string name="lblRestaurar">Restaurar</string>
    <string name="lblContEmergencia">Contacto de emergencia</string>
    <string name="lblReportar">Reportar abuso</string>
    <string name="lblPanico">Botón de pánico</string>
    <string name="lblPerfil">Perfil</string>
    <string name="lblSosMujer">SOS Mujer</string>
    <string name="lblIdioma">Elegir Idioma:</string>
    <string name="lblAbuso">Elegir Abuso:</string>
    <string name="lblMultimedia">Multimedia</string>
    <string name="lblEnvioAlertas">Intervalo de envío de alertas</string>
    <string name="lblActivarBoton">Activar botón de pánico con volumen (x3)</string>
    <string name="lblFuncionalidades">Funcionalidades</string>
    <string name="lblApariencia">Apariencia y Usabilidad</string>
    <string name="lblModoOscuro">Modo oscuro</string>
    <string name="lblTamañoTexto">Tamaño del texto</string>
    <string name="lblExtras">Extras</string>
    <string name="lblAcercaApp">Acerca de la app</string>
    <string name="lblProbarAlerta">Probar alerta de emergencia</string>
    <string name="lblComunidad">Comunidad</string>
    <string name="lblNombreContacto">Nombre</string>
    <string name="lblCancelar">Cancelar</string>
    <string name="lblTituloContacto">Agregar contacto de emergencia</string>
    <string name="lblRegistrar">Registrar</string>
    <string name="lblSOS">SOS</string>
    <string name="lblCompartirUbicacion">Compartir Ubicación</string>
    <string name="lblUbicacionCompartida">Tu ubicación está siendo compartida...</string>
    <string name="lblMiPerfil">Mi perfil</string>
    <string name="frgRepLblTipo">Tipo: </string>
    <string name="frgRepLblFecha">Fecha: </string>
    <string name="frgRepLblLugar">Lugar: </string>
    <string name="frgRepLblDescripcion">Descripción: </string>
    <string name="lblEnciarMensaje">Enviar Mensaje de Emergencia</string>
    <string name="lblPresionaBoton">Presiona el botón de pánico para enviar tu ubicación y mensaje de emergencia a tus contactos registrados.</string>
    <string name="lblNecesitasAyuda">¡Pánico! Necesitas ayuda urgente</string>
    <string name="lblContactosEmergencia">Contactos de emergencia</string>
    <string name="lblContadorContactos">0/3 contactos</string>
    <string name="btnEditar">Editar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="lblEditarContacto">Editar contacto</string>
    <string name="btnGuardarCambios">Guardar cambios</string>
    <string name="lblPreviewTexto">Texto de ejemplo</string>

    <!--Buttons-->
    <string name="btnIniciar">Iniciar Sesión</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnMisReportes">Mis reportes</string>
    <string name="btnReportar">Reportar</string>
    <string name="btnCerrarSesion">Cerrar Sesión</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnAgregar">Agregar</string>
    <string name="btnDetenerBusqueda">Detener Busqueda</string>
    <string name="btnMiUbicacionActual">Mi ubicación actual</string>

    <!--Hints-->
    <string name="hintNombre">Nombre(s)</string>
    <string name="hintApellidos">Apellidos</string>
    <string name="hintDni">Dni</string>
    <string name="hintDireccion">Dirección</string>
    <string name="hintNumero">Número de teléfono</string>
    <string name="hintTerminos">Términos y Condiciones</string>
    <string name="hintFechaNacimiento">Fecha de Nacimiento</string>
    <string name="hintCorreo">Correo electrónico</string>
    <string name="hintContraseña">Contraseña</string>
    <string name="hintConfirmarContraseña">Confirmar Contraseña</string>
    <string name="hintDescripcion">Descripcion</string>
    <string name="hintNumContacto">Número de teléfono</string>
    <string name="hintNombreContacto">Nombre(s)</string>

    <!--Arrays-->
    <string-array name="cboIdioma">
        <item>Español</item>
        <item>Quechua</item>
        <item>Inglés</item>
    </string-array>

    <string-array name="cboAbuso">
        <item>Robo</item>
        <item>Violencia física</item>
        <item>Violencia sexual</item>
        <item>Acoso</item>
    </string-array>

    <string-array name="cboIntervalo">
        <item>Cada 30 segundos</item>
        <item>Cada 1 minuto</item>
        <item>Cada 5 minutos</item>
        <item>Solo una vez</item>
    </string-array>

    <!--Filtro-->
    <string-array name="filtros_reportes">
        <item>Ver todos los reportes</item>
        <item>Ver reportes cercanos</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>