<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/regLblRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/morado"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/lblRegistro"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_margin="15dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">
            <EditText
                android:id="@+id/regTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:inputType="text"
                android:maxLength="100"
                android:hint="@string/hintNombre"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">
            <EditText
                android:id="@+id/regTxtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:inputType="text"
                android:maxLength="100"
                android:hint="@string/hintApellidos"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">
            <EditText
                android:id="@+id/regTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:hint="@string/hintCorreo"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">
            <EditText
                android:id="@+id/regTxtContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"
                android:hint="@string/hintContraseña"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp">
            <EditText
                android:id="@+id/regTxtConfirmarContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"
                android:hint="@string/hintConfirmarContraseña"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">
                <EditText
                    android:id="@+id/regTxtDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="100"
                    android:hint="@string/hintDireccion"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">
                <EditText
                    android:id="@+id/regTxtFechaNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintFechaNacimiento"
                    android:clickable="false"
                    android:focusable="false"
                    android:maxLength="10"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">
                <EditText
                    android:id="@+id/regTxtDni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="8"
                    android:hint="@string/hintDni" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">
                <EditText
                    android:id="@+id/regTxtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="9"
                    android:hint="@string/hintNumero" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/regChkTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/hintTerminos"
            tools:ignore="Deprecated"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/regBtnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:text="@string/btnRegistrar"
                android:backgroundTint="@color/morado"
                android:textColor="@color/white"
                app:strokeColor="@android:color/white"
                app:strokeWidth="2dp"
                app:cornerRadius="8dp"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/regBtnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:text="@string/btnCancelar"
                android:backgroundTint="@color/morado"
                android:textColor="@color/white"
                app:strokeColor="@android:color/white"
                app:strokeWidth="2dp"
                app:cornerRadius="8dp"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/regLblPregInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/morado"
                android:text="@string/lblPregInicio"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>