<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <!-- Handler -->
    <View
        android:layout_width="80dp"
        android:layout_height="6dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@android:color/darker_gray"
        android:alpha="0.5" />

    <!-- Título -->
    <TextView
        android:id="@+id/tituloEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblEditarContacto"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/morado"
        android:gravity="center"
        android:layout_marginBottom="20dp" />

    <!-- Nombre -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp">

        <EditText
            android:id="@+id/editarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNombreContacto"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Número -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/editarNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNumContacto"
            android:inputType="phone"
            android:maxLength="9"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón Guardar -->
    <Button
        android:id="@+id/btnGuardarCambios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarCambios"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/morado" />

</LinearLayout>
