<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentos.ConfiguracionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginVertical="15dp"
                    android:text="@string/lblConfiguracion"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lblIdioma"/>

                <Spinner
                    android:id="@+id/confCboIdioma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/cboIdioma"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingVertical="5dp" />

                <CheckBox
                    android:id="@+id/frgCfgChkNotificaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/lblNotificacion"/>

                <TextView
                    android:id="@+id/frgCfgLblSonido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lblSonido"/>

                <SeekBar
                    android:id="@+id/frgCfgBarSonido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="50"
                    android:paddingVertical="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/frgCfgBtnAplicar"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lblAplicar"
                        android:layout_marginRight="25dp"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/frgCfgBtnRestaurar"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lblRestaurar"
                        android:layout_marginLeft="25dp"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>